Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Recovery.out
Recovery.java:12:2: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.annotation.RetentionPolicy, java.lang.annotation.Annotation)
1 error
